--- a/frontend/diary-frontend/index.html
+++ b/frontend/diary-frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Keeper App</title>
+    <title>Diary App</title>
     <link href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap" rel="stylesheet" />
   </head>
 
