--- a/frontend/diary-frontend/index.html
+++ b/frontend/diary-frontend/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="root"></div>
 
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
